If Product isn't available in given currency it shouldn't render default variant hidden input
Always use `display_product` method on Frontend

Always use `display_product` method on Frontend pt 2

This isn't required

--- a/frontend/app/views/spree/products/_product.html.erb
+++ b/frontend/app/views/spree/products/_product.html.erb
@@ -10,7 +10,7 @@
       </div>
       <div class="card-footer text-center">
         <span class="price selling lead" content="<%= (product.price_in(current_currency).amount.nil?)? 0 : product.price_in(current_currency).amount.to_d %>">
-          <%= product.display_price %>
+          <%= display_price(product) %>
         </span>
         <span content="<%= current_currency %>"></span>
       </div>
