--- a/frontend/app/views/spree/shared/_carousel_product.html.erb
+++ b/frontend/app/views/spree/shared/_carousel_product.html.erb
@@ -2,5 +2,5 @@
   <%= carousel_image(product, image_class) %>
 
   <div class="product-component-name"><%= product.name %></div>
-  <div class="product-component-price"><%= product.display_price %></div>
+  <div class="product-component-price"><%= display_price(product) %></div>
 <% end %>
