--- a/frontend/app/views/spree/shared/_carousel_product.html.erb
+++ b/frontend/app/views/spree/shared/_carousel_product.html.erb
@@ -1,4 +1,4 @@
-<%= link_to product_path product do %>
+<%= link_to spree.product_path(product, taxon_id: @taxon&.id) do %>
   <%= carousel_image(product, image_class) %>
 
   <div class="product-component-name"><%= product.name %></div>
