--- a/frontend/app/views/spree/shared/_cart.html.erb
+++ b/frontend/app/views/spree/shared/_cart.html.erb
@@ -2,7 +2,7 @@
 
 <%= link_to spree.cart_path,
   class: "cart-icon #{'cart-icon--visible-count' if item_count > 0} #{local_assigns[:class]}",
-  'aria-label': Spree.t('spree.cart') do %>
+  'aria-label': Spree.t(:cart) do %>
   <%= icon(name: 'bag',
            width: size,
            height: size) %>
