Changes en.yml for store and store errors

--- a/backend/app/views/spree/admin/orders/index.html.erb
+++ b/backend/app/views/spree/admin/orders/index.html.erb
@@ -130,7 +130,7 @@
 
         <div class="col-12 col-lg-4">
           <div class="form-group">
-            <%= label_tag :q_store_id_in, Spree.t(:store_name) %>
+            <%= label_tag :q_store_id_in, Spree.t(:store) %>
             <%= f.select :store_id_in, Spree::Store.order(:name).pluck(:name, :id), { include_blank: true }, class: 'select2 js-filterable' %>
           </div>
         </div>
