--- a/frontend/app/views/spree/shared/_translations.html.erb
+++ b/frontend/app/views/spree/shared/_translations.html.erb
@@ -2,7 +2,8 @@
   window.addEventListener('turbolinks:load', function() {
       Spree.translations = <%==
     {
-      coupon_code_applied: Spree.t(:coupon_code_applied)
+      coupon_code_applied: Spree.t(:coupon_code_applied),
+      coupon_code_removed: Spree.t(:coupon_code_removed)
     }.to_json
   %>
   });
