--- a/frontend/app/views/spree/orders/_coupon_code.html.erb
+++ b/frontend/app/views/spree/orders/_coupon_code.html.erb
@@ -10,12 +10,13 @@
 <% else %>
   <div class='shopping-cart-coupon-code' data-hook='coupon_code'>
     <div class="input-group">
-      <%= order_form.text_field :applied_coupon_code, name: '', size: '30', class: 'form-control border-right-0 disabled', value: promotion.label %>
+      <%= order_form.text_field :applied_coupon_code, name: '', size: '30', class: 'form-control border-right-0 disabled',
+        value: promotion.label,
+        data: { code: promotion.source.promotion.code }
+      %>
       <div class="input-group-append">
-        <%= button_tag name: '', class: 'btn border-left-0 disabled' do %>
-          <%= icon(name: 'check-mark',
-                   width: 12,
-                   height: 9)  %>
+        <%= button_tag name: '', id: 'shopping-cart-remove-coupon-code-button', class: 'btn border-left-0 remove' do %>
+          <%= icon(name: 'close', width: 15, height: 14)  %>
         <% end %>
       </div>
     </div>
