--- a/frontend/app/assets/stylesheets/spree/frontend/application.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/application.scss
@@ -39,6 +39,7 @@
 @import 'components-custom/inputs';
 @import 'views/spree/checkout/registration';
 @import 'views/spree/checkout/confirm';
+@import 'views/spree/checkout/payment';
 @import 'views/spree/checkout/payment/gateway';
 @import 'views/spree/orders/edit';
 @import 'views/spree/orders/show';
