--- a/frontend/app/views/spree/checkout/edit.html.erb
+++ b/frontend/app/views/spree/checkout/edit.html.erb
@@ -1,4 +1,5 @@
 <% @body_id = 'checkout-page' %>
+<% display_coupon_code = Spree::Frontend::Config[:coupon_codes_enabled] && @order.state == 'confirm' %>
 
 <div id="checkout" class="container checkout" data-hook>
   <%= render partial: 'spree/shared/error_messages', locals: { target: @order } %>
@@ -18,7 +19,12 @@
         <%= form.hidden_field :state_lock_version %>
         <%= render @order.state, form: form %>
       </div>
-      <div id="checkout-summary" class="col-md-12 col-lg-auto" data-hook="checkout_summary_box">
+
+      <% if display_coupon_code %>
+        <%= render 'spree/orders/coupon_code', promotion: @order.adjustments.eligible.first, order_form: form, classes: 'col-lg-4 my-4' %>
+      <% end %>
+
+      <div id="checkout-summary" class="col-md-12 col-lg-auto <%= display_coupon_code ? 'col-lg-4 offset-lg-4' : 'col-lg-auto' %>" data-hook="checkout_summary_box">
         <%= render partial: 'summary', locals: { order: @order } %>
         <% submit_label_key = @order.confirm? ? :place_order : :save_and_continue %>
         <%= submit_tag Spree.t(submit_label_key), class: 'btn btn-primary text-uppercase font-weight-bold w-100 checkout-content-save-continue-button' %>
