--- a/frontend/app/views/spree/orders/_coupon_code.html.erb
+++ b/frontend/app/views/spree/orders/_coupon_code.html.erb
@@ -1,5 +1,5 @@
 <% if promotion.nil? %>
-  <div class='shopping-cart-coupon-code' data-hook='coupon_code'>
+  <div class='shopping-cart-coupon-code <%= classes %>' data-hook='coupon_code'>
     <div class="input-group">
       <%= order_form.text_field :coupon_code, size: '30', class: 'form-control border-right-0', placeholder: Spree.t('cart_page.add_promo_code') %>
       <div class="input-group-append">
@@ -8,7 +8,7 @@
     </div>
   </div>
 <% else %>
-  <div class='shopping-cart-coupon-code' data-hook='coupon_code'>
+  <div class='shopping-cart-coupon-code <%= classes %>' data-hook='coupon_code'>
     <div class="input-group">
       <%= order_form.text_field :applied_coupon_code, name: '', size: '30', class: 'form-control border-right-0 disabled',
         value: promotion.label,
