--- a/frontend/app/views/spree/orders/_coupon_code.html.erb
+++ b/frontend/app/views/spree/orders/_coupon_code.html.erb
@@ -11,8 +11,8 @@
   <div class='shopping-cart-coupon-code <%= classes %>' data-hook='coupon_code'>
     <div class="input-group">
       <%= order_form.text_field :applied_coupon_code, name: '', size: '30', class: 'form-control border-right-0 disabled',
-        value: promotion.label,
-        data: { code: promotion.source.promotion.code }
+        value: Spree.t(:promotion_label, name: promotion.name),
+        data: { code: promotion.code }
       %>
       <div class="input-group-append">
         <%= button_tag name: '', id: 'shopping-cart-remove-coupon-code-button', class: 'btn border-left-0 remove' do %>
