--- a/frontend/app/views/spree/shared/_category_nav_bar.html.erb
+++ b/frontend/app/views/spree/shared/_category_nav_bar.html.erb
@@ -16,7 +16,7 @@
       </ul>
     </div>
 
-    <%= link_to nested_taxons_path('streetstyle') do %>
+    <%= link_to spree.nested_taxons_path('streetstyle') do %>
       <div class="category-image category-image text-center mx-3">
         <%= main_nav_image(category, "summer_collection") %>
 
@@ -27,7 +27,7 @@
       </div>
     <% end %>
 
-    <%= link_to nested_taxons_path('summer-sale') do %>
+    <%= link_to spree.nested_taxons_path('summer-sale') do %>
       <div class="category-image category-image text-center mx-3">
         <%= main_nav_image(category, "special_offers") %>
 
