--- a/frontend/app/views/spree/shared/_nav_bar.html.erb
+++ b/frontend/app/views/spree/shared/_nav_bar.html.erb
@@ -18,7 +18,7 @@
       </div>
     </div>
   </li>
-  <% if defined?(account_link_path) %>
+  <% if defined?(spree.account_link_path) %>
     <li data-hook>
       <div class="dropdown navbar-right-dropdown">
         <button type="button" data-toggle="dropdown" class="navbar-right-dropdown-toggle" aria-label="<%= Spree.t('nav_bar.show_user_menu')%>">
