[SD-563] reorganize footer

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/footer.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/footer.scss
@@ -20,6 +20,7 @@
     font-size: font-px-to-rem(9px);
     a {
       color: theme-color('dark');
+      text-decoration: underline;
     }
 
     @include media-breakpoint-up(xl) {
