Use dynamic year in footer 📅

--- a/frontend/app/views/spree/shared/_copyright.html.erb
+++ b/frontend/app/views/spree/shared/_copyright.html.erb
@@ -9,7 +9,7 @@
       </div>
       <div class="d-none d-lg-inline-block mr-2">|</div>
       <div>
-        © 2019
+        © <%= Time.current.year %>
         <%= link_to 'Spree Commerce', 'https://spreecommerce.org/', target: :blank, 'aria-label': 'Go to Spree Commerce', rel: :follow %>.
         All Rights Reserved.
       </div>
