--- a/frontend/app/views/spree/users/edit.html.erb
+++ b/frontend/app/views/spree/users/edit.html.erb
@@ -6,7 +6,7 @@
     <div class="card-body">
       <%= render partial: 'spree/shared/error_messages', locals: { target: @user } %>
 
-      <%= form_for Spree::User.new, as: @user, url: spree.user_path(@user), :method => :put do |f| %>
+      <%= form_for Spree.user_class.new, as: @user, url: spree.user_path(@user), :method => :put do |f| %>
         <%= render partial: 'spree/shared/user_form', locals: { f: f, remember_me_field: false } %>
         <div>
           <%= f.submit Spree.t(:update), :class => 'btn btn-primary' %>
