--- a/frontend/app/views/spree/shared/_login.html.erb
+++ b/frontend/app/views/spree/shared/_login.html.erb
@@ -1,19 +1,33 @@
+<h3 class="spree-mb-large spree-mt-large spree-header"><%= Spree.t(:log_in_to_continue) %></h3>
 <%= form_for Spree.user_class.new, as: :spree_user, url: spree.create_new_session_path do |f| %>
-  <fieldset id="password-credentials">
-    <div class="form-group">
-      <%= f.email_field :email, class: 'form-control', tabindex: 1, placeholder: Spree.t(:email) %>
+  <div id="password-credentials" class="mb-4">
+    <div class="form-group mb-0">
+      <%= f.label :email, Spree.t(:email), class: 'spree-flat-label' %>
+      <%= f.email_field :email, class: 'spree-flat-input', value: params.dig(:spree_user, :email), tabindex: 1, autofocus: true %>
     </div>
-    <div class="form-group">
-      <%= f.password_field :password, class: 'form-control', tabindex: 2, placeholder: Spree.t(:password) %>
+    <div class="form-group mb-0">
+      <%= f.label :password, Spree.t(:password), class: 'spree-flat-label spree-mt-medium' %>
+      <%= f.password_field :password, class: 'spree-flat-input', tabindex: 2 %>
     </div>
-    <div class="checkbox">
-      <label>
-        <%= f.check_box :remember_me %>
-        <%= f.label :remember_me, Spree.t(:remember_me) %>
-      </label>
+  </div>
+  <div class="spree-checkbox-container mt-4 mt-sm-5 mt-lg-4 spree-mb-medium">
+    <div class="spree-checkbox">
+      <%= f.check_box :remember_me, tabindex: 3 %>
+      <%= f.label :remember_me, '' %>
     </div>
-    <div class="form-group">
-      <%= f.submit Spree.t(:login), class: 'btn btn-lg btn-success btn-block', tabindex: 3 %>
-    </div>
-  </fieldset>
+
+    <%= f.label :remember_me, Spree.t(:remember_me), class: 'spree-checkbox-label' %>
+  </div>
+
+  <%= f.submit Spree.t(:log_in), class: 'btn btn-primary btn-block spree-btn mt-2', tabindex: 4 %>
 <% end %>
+
+<% if spree.responds_to?(:recover_password_path) %>
+  <div class="text-center forgot-password mb-4">
+    <%= link_to Spree.t(:forgot_password), spree.recover_password_path %>
+  </div>
+<% end %>
+
+<h3 class="spree-header header-sm spree-mt-medium mb-3 mb-sm-4 mb-xl-4"><%= Spree.t('dont_have_account') %></h3>
+<%= link_to Spree.t(:sign_up), spree.signup_path, class: 'btn btn-block btn-outline-primary spree-btn' %>
+<div data-hook="login_extras"></div>
