Move users/edit from spree_auth_devise

--- a/frontend/app/assets/stylesheets/spree/frontend/components-custom/inputs.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/components-custom/inputs.scss
@@ -21,6 +21,9 @@
   &:focus {
     border-color: theme-color('primary');
   }
+  &::placeholder {
+    text-transform: uppercase;
+  }
 }
 
 .spree-flat-select {
