--- a/frontend/app/views/spree/shared/_user_form.html.erb
+++ b/frontend/app/views/spree/shared/_user_form.html.erb
@@ -1,15 +1,12 @@
-<div class="form-group mb-4">
-  <%= f.label :email, Spree.t(:email), class: 'spree-flat-label' %>
-  <%= f.email_field :email, class: 'spree-flat-input' %>
+<div class="form-group mb-5">
+  <%= f.email_field :email, class: 'spree-flat-input', placeholder: Spree.t(:email) %>
 </div>
 
 <div class="form-group mb-4">
-  <%= f.label :password, Spree.t(:password), class: 'spree-flat-label' %>
-  <%= f.password_field :password, class: 'spree-flat-input' %>
+  <%= f.password_field :password, class: 'spree-flat-input', placeholder: Spree.t(:password) %>
 </div>
 
-<div class="form-group mb-4">
-  <%= f.label :password_confirmation, Spree.t(:password_confirmation), class: 'spree-flat-label' %>
-  <%= f.password_field :password_confirmation, class: 'spree-flat-input' %>
+<div class="form-group mb-5">
+  <%= f.password_field :password_confirmation, class: 'spree-flat-input', placeholder: Spree.t(:confirm_password) %>
 </div>
 <div data-hook="signup_below_password_fields"></div>
