--- a/frontend/app/views/spree/addresses/_form.html.erb
+++ b/frontend/app/views/spree/addresses/_form.html.erb
@@ -3,19 +3,21 @@
 <% Spree::Address::ADDRESS_FIELDS.each do |field| %>
   <% if field == "country" %>
     <p class="form-group checkout-content-inner-field" id="<%= "#{address_id}country" %>">
-      <%= address_form.label :country_id, Spree.t(:country), class: "text-uppercase" %><span class="required">*</span><br />
       <span id="<%= "#{address_id}country-selection" %>" class="d-block position-relative">
-        <%= address_form.collection_select :country_id, available_countries, :id, :name, {}, {:class => 'required form-control spree-flat-select'} %>
+        <%= address_form.collection_select :country_id, available_countries, :id, :name,
+                                           { prompt: Spree.t(:country).upcase },
+                                           { class: 'required form-control spree-flat-select'} %>
         <%= image_tag 'arrow.svg', class: 'position-absolute spree-flat-select-arrow' %>
       </span>
     </p>
   <% elsif field == "state" %>
-    <%= address_field(address_form, :state, address_id) { address_state(address_form, address.country, address_id) } if Spree::Config[:address_requires_state] %>
-  <% elsif field == "lastname" %>
-    <%= address_field(address_form, field.to_sym, address_id) %>
+    <div class="form-group mb-4">
+      <%= address_field(address_form, :state, address_id) { address_state(address_form, address.country, address_id) } if Spree::Config[:address_requires_state] %>
+    </div>
   <% else %>
     <% next if field == "company" && !Spree::Config[:company] %>
     <% next if field == "alternative_#{address_id}_phone" && !Spree::Config["alternative_#{address_id}_phone"] %>
-    <%= address_field(address_form, field.to_sym, address_id) %>
-  <% end %>
+    <div class="form-group mb-4">
+      <%= address_field(address_form, field.to_sym, address_id) %>
+    </div>  <% end %>
 <% end %>
