--- a/frontend/app/views/spree/products/_filters_desktop.html.erb
+++ b/frontend/app/views/spree/products/_filters_desktop.html.erb
@@ -1,4 +1,4 @@
-<% cache @option_types do %>
+<% cache [@option_types, permitted_params] do %>
   <div id="plp-filters-accordion" class="d-none d-lg-block col-lg-4 pr-5 plp-filters" data-hook="taxon_sidebar_navigation">
 
     <% @option_types.each do |option_type| %>
